RAT-478: Raise language level to JDK17 (#599)
* RAT-478: Raise language level to JDK17, remove animal-sniffer, build with 18,21,25 on GHA

* RAT-478, RAT-479: Skip site and javadoc build step on GHA with JDK17

* RAT-478: Changelog - change to language level 17, build with JDK21

* RAT-478: Remove existing JDK8 dependabot exclusions

* RAT-498, RAT-478: Update to latest tika to avoid CVE-2025-66516.

* RAT-498: Update mockito to latest version

* RAT-478: Fix dependabot config error

* RAT-478: Try to exclude steps on GHA with JDK17

* RAT-498: Update junit to 5.14.1

* RAT-498: Update dependencies during ANT Unit test runs

* RAT-478: Apply language features up to JDK17

* RAT-478: Remove unused imports and harmonize file templates

* RAT-478: Try new format in GHA to avoid JDK17 javadoc/site builds

* RAT-478: Try to change if condition

* RAT-478: Move inside expression language

* RAT-478: Do not generate javadoc/site with Java17

* RAT-498, RAT-478, RAT-527: Update dependencies und plugins

* RAT-478: Migrate to jUnit 6.1.0-M1

* RAT-478: Fix minor warnings

* RAT-478: Fix FS-VA_FORMAT_STRING_USES_NEWLINE

* RAT-478: Fix REC - REC_CATCH_EXCEPTION

Explicitly rethrow runtime exceptions instead of catching it

* RAT-478: Apply spotbugs-induced changes, improve javadoc

* RAT-478: Use UTF-8 as default encoding and fix spotbugs issues

* RAT-478: Add migration guide entries for 0.18

* RAT-478: Add changelog entry for UTF-8 fallback

* RAT-478: Fix glitches in release note template and link to migration guide

* RAT-528: Add hint to refactor annotation mechanism

* RAT-478: adapt docs concerncing Java17

* RAT-478: Rm comment as number of spotbugs warnings is stable as of >=JDK17

* RAT-478: Add documentation